# credit-risk-ml

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  Dockerfile  PROGRAM.md  README.md  features.md  pyproject.toml  results.tsv
.github/workflows/: deploy-pages.yml
frontend/: .env.example  package-lock.json  package.json  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html  vite-env.d.ts
frontend/src/routes/: +layout.svelte  +page.svelte
model/: model_calibrated.pkl
notebooks/: 01_eda.ipynb  02_modelling.ipynb  03_calibration.ipynb  04_explainability.ipynb  05_survival.ipynb  eda.ipynb
sql/: amt_credit_risk.sql  bureau_depth_risk.sql  credit_card_util_risk.sql  load.sql  previous_applications.sql
sql/eda/: README.md  age_risk.sql  age_risk_bands.sql  amt_income_risk.sql  annuity_to_income_risk.sql  bureau_depth_risk.sql  bureau_zero_vs_rest.sql  credit_to_income_risk.sql  external_scores_by_target.sql  goods_price_to_credit_risk.sql  income_credit_default_heatmap.sql  installments_target_summary.sql  occupational_risk.sql  prev_rejection_share_risk.sql  risk_concentration_by_occupation.sql  target_distribution.sql
sql/features/: application_ratios.sql  bureau_balance_summary.sql  bureau_summary.sql  credit_card_summary.sql  installments_payments.sql  installments_payments_summary.sql  pos_cash_summary.sql  previous_applications.sql
src/: api.py  feature_selection.py  features.py  metrics.py  mlflow_helpers.py  train.py
